# stock-forecast

./: ARCHITECTURE_GUIDE.md  Makefile  QUICK_START.md  README.md  backtest_results_etf.pkl  env.example  generate_html_report.py  multi_test.yaml  pyproject.toml  requirements-dev.txt  test_portfolio.yaml
configs/: multi_portfolio_analysis.yaml  my_portfolio.yaml  portfolio_config_example.yaml
data/backtest_results/: 20250803T172640.pkl  20250803T172651.pkl
data/raw/2020-01-01/: BITO.csv  GLD.csv  QQQ.csv  VOO.csv
data/raw/2024-01-01/: AAPL.csv  MSFT.csv
data/silver/: features.parquet
notebooks/: 00_quick_start.ipynb
reports/: etf_backtest_interactive.html  etf_backtest_report.md  portfolio_report_20250803_174129.html  portfolio_report_20250803_174129.md  portfolio_report_20250803_174143.html  portfolio_report_20250803_174143.md
reports/my_portfolio_20250803_175205/: portfolio_report_20250803_175205.html  portfolio_report_20250803_175205.md
reports/my_portfolio_20250803_175629/: portfolio_report_20250803_175629.html  portfolio_report_20250803_175629.md
src/: cli.py  config.py
src/backtest/: easy_interface.py  engine.py  metrics.py  portfolio_analyzer.py
src/config/: __init__.py  enhanced_yaml_config.py  yaml_config.py
src/features/: labeler.py  ta_factors.py
src/ingest/: yfinance_cli.py
src/reports/: advanced_reporter.py  plotly_dash.py
src/strategies/: equal_weight.py  vol_parity.py
src/utils/: paths.py
stock_forecast.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: test_backtest.py  test_features.py
